# my_AI_Book

./: .env
.specify/memory/: constitution.md
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/config/: settings.py
backend/embeddings_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/embedding/: embedding_generator.py
backend/src/extraction/: content_extractor.py
backend/src/models/: entities.py
backend/src/storage/: qdrant_client.py
backend/src/utils/: helpers.py
backend/tests/: conftest.py  test_embedding.py  test_extraction.py  test_storage.py
frontend/: docusaurus.config.ts  sidebars.ts
frontend/docs/: intro.md
frontend/docs/module-2-digital-twin/: index.md  terminology.md
frontend/docs/module-4-vla/: index.md  terminology.md
frontend/src/pages/: index.tsx
history/prompts/001-embeddings-deployment/: 1-embeddings-deployment-spec.spec.prompt.md  2-embeddings-deployment-plan.plan.prompt.md  3-embeddings-deployment-tasks.tasks.prompt.md  4-embeddings-deployment-implementation.green.prompt.md
history/prompts/digital-twin/: 001-digital-twin-gazebo-unity-implement.green.prompt.md  (+3 more)
specs/001-embeddings-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-digital-twin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-robot-brain/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-vla-robot-control/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+84 files in other folders)
